@@ -14,14 +14,20 @@ public class CorsConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("https://www.syncly-io.com","https://syncly-io.com","http://localhost:3000", "http://127.0.0.1:5500")); // 프론트엔드 서버
+        configuration.setAllowedOrigins(List.of(
+                "https://www.syncly-io.com",
+                "https://syncly-io.com",
+                "http://localhost:3000",
+                "http://127.0.0.1:5500"
+        ));
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
-        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Cache-Control", "Content-Type"));
-        configuration.setAllowCredentials(true); // 쿠키를 포함한 요청 허용
-        configuration.setMaxAge(3600L);// 요청 결과 캐싱 시간 (1시간)
+        configuration.setAllowedHeaders(List.of("*")); // 모든 헤더 허용
+        configuration.setAllowCredentials(true);
+        configuration.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", configuration);//내 도메인으로 제한
+        source.registerCorsConfiguration("/**", configuration);
         return source;
     }
 }
+
